[project]
name = "lerf"
version = "0.1.1"

dependencies=[
    "clip @ git+https://github.com/openai/CLIP.git",
    "ftfy",
    "nerfstudio>=0.3.0",
    "open_clip_torch",
    "regex",
    "timm",
    "torchtyping",
    "tqdm",
    "clip @ git+https://github.com/openai/CLIP.git",
    "nerfstudio>=0.3.1"
]

[tool.setuptools.packages.find]
include = ["lerf*"]

[project.entry-points.'nerfstudio.method_configs']
lerf = 'lerf.lerf_config:lerf_method'
lerf_big = 'lerf.lerf_config:lerf_method_big'
lerf_lite = 'lerf.lerf_config:lerf_method_lite'
